# whispergg

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/whispergg/: alignment.py  asr.py  config.py  main.py  transcriber.py  write_subtitles.py
src/whispergg/whisperx/: conjunctions.py  subtitles_processor.py
